// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtNoticebar should render prop -- icon 1`] = `
<view
  class="at-noticebar"
>
  <!---->
  <view
    class="at-noticebar__content"
  >
    <view
      class="at-noticebar__content-icon"
    >
      <text
        class="at-icon at-icon-volume-plus"
      />
    </view>
    <view
      class="at-noticebar__content-text"
    >
      <view
        animation="[object Object]"
        class="at-noticebar__content-inner"
        id="J_6fhh"
      >
        这是内容
      </view>
      <!---->
    </view>
  </view>
</view>
`;

exports[`AtNoticebar should render prop -- moreText & showMore 1`] = `
<view
  class="at-noticebar at-noticebar--single"
>
  <!---->
  <view
    class="at-noticebar__content"
  >
    <!---->
    <view
      class="at-noticebar__content-text"
    >
      <view
        animation="[object Object]"
        class="at-noticebar__content-inner"
        id="J_cadd"
      >
        这是内容
      </view>
      <view
        class="at-noticebar__more"
      >
        <text
          class="text"
        >
          查看更多
        </text>
        <view
          class="at-noticebar__more-icon"
        >
          <text
            class="at-icon at-icon-chevron-right"
          />
        </view>
      </view>
    </view>
  </view>
</view>
`;

exports[`AtNoticebar should render prop -- show 1`] = `
<view
  class="at-noticebar"
>
  <view
    class="at-noticebar__close"
  >
    <text
      class="at-icon at-icon-close"
    />
  </view>
  <view
    class="at-noticebar__content"
  >
    <!---->
    <view
      class="at-noticebar__content-text"
    >
      <view
        animation="[object Object]"
        class="at-noticebar__content-inner"
        id="J_clqv"
      >
        这是内容
      </view>
      <!---->
    </view>
  </view>
</view>
`;

exports[`AtNoticebar should render prop -- single 1`] = `
<view
  class="at-noticebar at-noticebar--single"
>
  <!---->
  <view
    class="at-noticebar__content"
  >
    <!---->
    <view
      class="at-noticebar__content-text"
    >
      <view
        animation="[object Object]"
        class="at-noticebar__content-inner"
        id="J_792r"
      >
        这是内容
      </view>
      <!---->
    </view>
  </view>
</view>
`;

exports[`AtNoticebar should render prop -- speed 1`] = `
<view
  class="at-noticebar"
>
  <!---->
  <view
    class="at-noticebar__content"
  >
    <!---->
    <view
      class="at-noticebar__content-text"
    >
      <view
        animation="[object Object]"
        class="at-noticebar__content-inner"
        id="J_brub"
      >
        这是内容
      </view>
      <!---->
    </view>
  </view>
</view>
`;
